<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_user_srl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_grey_300"
    tools:context="stephania.com.usergithub.DetailUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/image_rl"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:civ_border_width="0dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/name_user_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_below="@+id/user_iv"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/followers_tv"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:textColor="@color/white"
                android:paddingTop="4dp"
                android:textSize="16sp"/>

            <TextView
            android:id="@+id/next_followers_tv"
            android:text="@string/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/followers_tv"
            android:layout_marginLeft="24dp"
            android:textColor="@color/white"
            android:paddingTop="4dp"
            android:alpha="0.7"
            android:textSize="14sp"/>

            <TextView
                android:id="@+id/following_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:textColor="@color/white"
                android:paddingTop="4dp"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/followers_tv"
                />

            <TextView
                android:id="@+id/next_following_tv"
                android:text="@string/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:layout_gravity="center_vertical|left"
                android:layout_below="@+id/following_tv"
                android:layout_toRightOf="@+id/next_followers_tv"
                android:layout_marginLeft="102dp"
                android:textColor="@color/white"
                android:alpha="0.7"
                android:textSize="14sp"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/email_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:layout_below="@+id/image_rl"
        android:clickable="true"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="120dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.38"
                android:src="@drawable/ic_email"
                android:padding="4dp"
                android:layout_margin="4dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="-140dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:paddingTop="4dp"
                android:layout_gravity="center_vertical"
                android:alpha="0.87"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_gravity="center_vertical"
                android:alpha="0.5"
                android:textColor="@color/colorAccent"
                android:text="@string/email"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/email_ll"
        android:background="@color/colorAccent"
        android:alpha="0.35"/>

    <LinearLayout
        android:id="@+id/public_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:layout_below="@+id/email_ll"
        android:clickable="true"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="120dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/public_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:alpha="0.38"
                android:src="@drawable/ic_public_up"
                android:padding="4dp"
                android:layout_margin="4dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="-140dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/public_repos_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:paddingTop="4dp"
                android:layout_gravity="center_vertical"
                android:alpha="0.87"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_gravity="center_vertical"
                android:alpha="0.5"
                android:text="@string/public_repos"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/public_ll"
        android:background="@color/colorAccent"
        android:alpha="0.35"/>

            <LinearLayout
                android:id="@+id/public_gists_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:layout_below="@+id/email_ll"
                android:clickable="true"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginRight="120dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/gists_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:alpha="0.38"
                        android:src="@drawable/ic_public"
                        android:padding="4dp"
                        android:layout_margin="4dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-140dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/public_gists_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:paddingTop="4dp"
                        android:layout_gravity="center_vertical"
                        android:alpha="0.87"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_gravity="center_vertical"
                        android:alpha="0.5"
                        android:textColor="@color/colorAccent"
                        android:text="@string/public_gists"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/public_gists_ll"
        android:background="@color/colorAccent"
        android:alpha="0.35"/>

            <LinearLayout
                android:id="@+id/created_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:layout_below="@+id/public_ll"
                android:clickable="true"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginRight="120dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/created_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:alpha="0.38"
                        android:src="@drawable/ic_create"
                        android:padding="4dp"
                        android:layout_margin="4dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-140dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/created_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:paddingTop="4dp"
                        android:layout_gravity="center_vertical"
                        android:alpha="0.87"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_gravity="center_vertical"
                        android:alpha="0.5"
                        android:textColor="@color/colorAccent"
                        android:text="@string/created_at"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/created_ll"
                android:background="@color/colorAccent"
                android:alpha="0.35"/>

            <LinearLayout
                android:id="@+id/created_up_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:layout_below="@+id/public_ll"
                android:clickable="true"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginRight="120dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/created_up_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:alpha="0.38"
                        android:src="@drawable/ic_update"
                        android:padding="4dp"
                        android:layout_margin="4dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-140dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/updated_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:paddingTop="4dp"
                        android:layout_gravity="center_vertical"
                        android:alpha="0.87"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_gravity="center_vertical"
                        android:paddingBottom="4dp"
                        android:alpha="0.5"
                        android:textColor="@color/colorAccent"
                        android:text="@string/updated_at"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
